kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-db-ingress
  namespace: multi-db-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - aks.gb-coding.nl
        # - gb-coding.nl
      secretName: gb-coding-tls
  rules:
    - host: aks.gb-coding.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multi-db-backend
                port:
                  number: 80
    # - host: gb-coding.nl
    #   http:
    #     paths:
    #     - path: /
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: homepage-service
    #           port:
    #             number: 80
